<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tfg.jonay.videovigilancia.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_p_principal"
        android:id="@+id/btn_camera"
        android:text="@string/ver_video"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_p_principal"
        android:id="@+id/btn_servidor"
        android:text="@string/config_serv"
        android:layout_below="@+id/btn_camera"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_p_principal"
        android:id="@+id/btn_robot"
        android:text="@string/config_robot"
        android:layout_below="@+id/btn_servidor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_p_principal"
        android:id="@+id/btn_notificaciones"
        android:text="@string/config_notif"
        android:layout_below="@+id/btn_robot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
