<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tfg.jonay.videovigilancia.CameraActivity">

    <net.majorkernelpanic.streaming.gl.SurfaceView

        android:id="@+id/view_cam"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="@dimen/icon_btn"
        android:layout_height="@dimen/icon_btn"
        android:id="@+id/ver_video"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/icon_video"
        android:textSize="@dimen/icon_text"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/view_cam"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="@dimen/icon_btn"
        android:layout_height="@dimen/icon_btn"
        android:id="@+id/btn_flash"
        style="?android:attr/buttonStyleSmall"
        android:text="@string/icon_flash"
        android:textSize="@dimen/icon_text"
        android:layout_alignTop="@+id/ver_video"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="@dimen/icon_btn"
        android:layout_height="@dimen/icon_btn"
        android:id="@+id/btn_stop"
        android:text="@string/icon_stop"
        android:textSize="@dimen/icon_text"
        android:layout_alignTop="@+id/ver_video"
        android:layout_centerHorizontal="true"
        />

    <!--<Button-->
        <!--android:layout_width="@dimen/icon_btn"-->
        <!--android:layout_height="@dimen/icon_btn"-->
        <!--android:id="@+id/btn_simular_mov"-->
        <!--android:text="@string/simular_mov"-->
        <!--android:layout_below="@id/view_cam"-->
        <!--android:layout_centerHorizontal="true"/>-->

    <!--<Button-->
        <!--android:layout_width="@dimen/icon_btn"-->
        <!--android:layout_height="@dimen/icon_btn"-->
        <!--android:id="@+id/btn_streaming"-->
        <!--android:text="@string/icon_streaming"-->
        <!--android:textSize="@dimen/icon_text"-->
        <!--android:layout_alignTop="@+id/btn_flash"-->
        <!--android:layout_toLeftOf="@+id/btn_flash"-->
        <!--android:layout_toStartOf="@+id/btn_flash" />-->

    <!--<Button-->
        <!--android:layout_width="@dimen/icon_btn"-->
        <!--android:layout_height="@dimen/icon_btn"-->
        <!--android:id="@+id/btn_mov"-->
        <!--android:text="@string/icon_mov"-->
        <!--android:textSize="@dimen/icon_text"-->
        <!--android:layout_alignTop="@+id/ver_video"-->
        <!--android:layout_toRightOf="@+id/ver_video"-->
        <!--android:layout_toEndOf="@+id/ver_video" />-->

</RelativeLayout>
